--- a/src/Tessera.App/Tessera.App.csproj
+++ b/src/Tessera.App/Tessera.App.csproj
@@ -20,25 +20,26 @@
             <PrivateAssets Condition="'$(Configuration)' != 'Debug'">All</PrivateAssets>
         </PackageReference>
         <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
-        <PackageReference Include="FluentAvaloniaUI" Version="2.4.1" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.12" />
         <PackageReference Include="Svg.Controls.Skia.Avalonia" Version="11.3.9.2" />
     </ItemGroup>
 
     <ItemGroup>
+      <AvaloniaResource Include="Assets\Icons\avalonia-logo.ico" />
+      <AvaloniaResource Include="Assets\Logo\logo-large.svg" />
+      <AvaloniaResource Include="Assets\Logo\logo-small.svg" />
       <None Remove="Assets\avalonia-logo.ico" />
-      <AvaloniaResource Include="Assets\avalonia-logo.ico" />
       <None Remove="Assets\Fonts\Phosphor.ttf" />
       <None Remove="Assets\Fonts\Phosphor-Fill.ttf" />
       <None Remove="Assets\Images\logo.svg" />
-      <AvaloniaResource Include="Assets\Images\logo-large.svg" />
       <None Remove="Assets\Images\logo-small.svg" />
-      <AvaloniaResource Include="Assets\Images\logo-small.svg" />
       <None Remove="Assets\Images\dot-outline.svg" />
-      <AvaloniaResource Include="Assets\Images\point.svg" />
+      <AvaloniaResource Include="Assets\Icons\point.svg" />
       <None Remove="Assets\Images\line.svg" />
-      <AvaloniaResource Include="Assets\Images\line.svg" />
+      <AvaloniaResource Include="Assets\Icons\line.svg" />
       <None Remove="Assets\Images\pencil-simple.svg" />
-      <AvaloniaResource Include="Assets\Images\pencil-simple.svg" />
+      <AvaloniaResource Include="Assets\Icons\pencil-simple.svg" />
+      <None Remove="Assets\Images\sign-out.svg" />
+      <AvaloniaResource Include="Assets\Icons\exit.svg" />
     </ItemGroup>
 </Project>
