Add eraser tool
- Add rectangle shape
- Add erasing logic for point and simple logic for liens

--- a/src/Tessera.App/Tessera.App.csproj
+++ b/src/Tessera.App/Tessera.App.csproj
@@ -42,6 +42,8 @@
       <AvaloniaResource Include="Assets\Icons\exit.svg" />
       <None Remove="Assets\Icons\broom.svg" />
       <AvaloniaResource Include="Assets\Icons\broom.svg" />
+      <None Remove="Assets\Icons\eraser.svg" />
+      <AvaloniaResource Include="Assets\Icons\eraser.svg" />
     </ItemGroup>
 
     <ItemGroup>
