--- a/src/Tessera.App/Tessera.App.csproj
+++ b/src/Tessera.App/Tessera.App.csproj
@@ -66,6 +66,10 @@
       <AvaloniaResource Include="Assets\Icons\circle-dotted.svg" />
       <None Remove="Assets\Icons\square.svg" />
       <AvaloniaResource Include="Assets\Icons\square.svg" />
+      <None Remove="Assets\Icons\minus.svg" />
+      <AvaloniaResource Include="Assets\Icons\minus.svg" />
+      <None Remove="Assets\Icons\plus.svg" />
+      <AvaloniaResource Include="Assets\Icons\plus.svg" />
     </ItemGroup>
 
     <ItemGroup>
